<?xml version="1.0" encoding="utf-8"?>

<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_height="match_parent"
        android:background="@color/colorBg"
        android:padding="@dimen/space_8dp"
        android:layout_width="match_parent"
        android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout

            android:layout_width="match_parent" android:layout_height="match_parent"
            tools:context=".ActivityB">


        <ImageView android:layout_width="wrap_content"
                   android:id="@+id/myPhotoImageView"
                   android:layout_height="200dp"
                   android:contentDescription="@string/my_photo"
                   android:src="@drawable/zeinab_photo"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintEnd_toEndOf="parent"
                   app:layout_constraintTop_toTopOf="parent"/>

        <TextView android:layout_width="wrap_content"
                  android:id="@+id/myNameTextView"
                  android:layout_marginTop="@dimen/space_16dp"
                  android:text="@string/zeinab_mohamed_abdelmawla"
                  app:layout_constraintEnd_toEndOf="parent"
                  android:textIsSelectable="true"
                  app:layout_constraintStart_toStartOf="parent"
                  android:textStyle="bold"
                  app:layout_constraintTop_toBottomOf="@+id/myPhotoImageView"
                  android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                  android:layout_height="wrap_content"/>

        <View android:layout_width="match_parent"
              android:id="@+id/separatorView"
              android:layout_marginTop="@dimen/space_16dp"
              app:layout_constraintTop_toBottomOf="@+id/myNameTextView"
              android:background="@color/colorSeparator"
              android:layout_height="2dp"/>

        <TextView android:layout_width="wrap_content"
                  android:id="@+id/myTrackTextView"
                  android:layout_margin="@dimen/space_8dp"
                  android:text="@string/my_track"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintTop_toBottomOf="@+id/separatorView"
                  android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                  android:layout_height="wrap_content"/>

        <TextView android:layout_width="wrap_content"
                  android:id="@+id/myCountryTextView"
                  android:layout_margin="@dimen/space_8dp"
                  android:text="@string/my_country"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintTop_toBottomOf="@+id/myTrackTextView"
                  android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                  android:layout_height="wrap_content"/>


        <TextView android:layout_width="wrap_content"
                  android:id="@+id/myEmailTextView"
                  android:layout_margin="@dimen/space_8dp"
                  android:text="@string/my_email"
                  android:autoLink="email"
                  android:textIsSelectable="true"
                  android:linksClickable="true"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintTop_toBottomOf="@+id/myCountryTextView"
                  android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                  android:layout_height="wrap_content"/>

        <TextView android:layout_width="wrap_content"
                  android:id="@+id/myPhoneNumberTextView"
                  android:layout_margin="@dimen/space_8dp"
                  android:text="@string/my_phone_number"
                  android:autoLink="phone"
                  android:textIsSelectable="true"
                  android:linksClickable="true"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintTop_toBottomOf="@+id/myEmailTextView"
                  android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                  android:layout_height="wrap_content"/>

        <TextView android:layout_width="wrap_content"
                  android:id="@+id/mySlackUserNameTextView"
                  android:layout_margin="@dimen/space_8dp"
                  android:text="@string/my_slack_username"
                  android:textIsSelectable="true"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintTop_toBottomOf="@+id/myPhoneNumberTextView"
                  android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                  android:layout_height="wrap_content"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>