<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:padding="@dimen/space_32dp"
        android:background="@color/colorBg"
        android:layout_width="match_parent" android:layout_height="match_parent"
        tools:context=".ActivityA">

    <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guidelineH"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5"/>

    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              app:layout_constraintTop_toTopOf="parent"
              android:gravity="center"
              android:text="@string/welcome_to_alc_4"
              android:textStyle="bold"
              android:textColor="@color/colorOnSurface"
              android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
               />

    <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/navToActivityB_Button"
            android:text="@string/about_alc"
            style="@style/Button"
            app:backgroundTint="@color/colorSurface"
            app:layout_constraintBottom_toTopOf="@id/navToActivityC_Button"
    />


    <com.google.android.material.button.MaterialButton
            android:id="@+id/navToActivityC_Button"
            android:layout_width="match_parent"
            android:text="@string/my_profile"
            android:textAllCaps="true"
            app:backgroundTint="@color/colorSurface"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/guidelineH"
            style="@style/Button"/>


</androidx.constraintlayout.widget.ConstraintLayout>